- Fixed tests - Added more comments